testsuite/tests/parse-errors/unclosed_object.compilers.reference
File "unclosed_object.ml", line 11, characters 0-0:
Error: Syntax error
